Lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI
    9       | error Specifier SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDefList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | ε

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB
   23       | error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP
   27       | error LP VarList RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC
   32       | error RC

   33 StmtList: Stmt StmtList
   34         | ε

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | error SEMI
   42     | Exp error SEMI
   43     | RETURN Exp error
   44     | RETURN error SEMI

   45 DefList: Def DefList
   46        | ε

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI
   49    | Specifier DecList error

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | ERRORNUM

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 22 23 26 27 32 41 42 43 44 48 49
    INT (258) 21 70
    FLOAT (259) 71
    ID (260) 17 19 20 24 25 26 65 66 68 69
    TYPE (261) 13
    RELOP (262) 57
    ASSIGNOP (263) 53 54
    PLUS (264) 58
    MINUS (265) 59 63
    STAR (266) 60
    DIV (267) 61
    AND (268) 55
    OR (269) 56
    NOT (270) 64
    DOT (271) 68
    COMMA (272) 11 28 51 73
    SEMI (273) 4 5 7 8 9 35 37 41 42 44 47 48
    LP (274) 24 25 26 27 38 39 40 62 65 66
    RP (275) 24 25 26 27 38 39 40 62 65 66
    LB (276) 21 22 67
    RB (277) 21 22 23 67
    LC (278) 15 31
    RC (279) 15 31 32
    STRUCT (280) 15 16
    RETURN (281) 37 43 44
    IF (282) 38 39
    ELSE (283) 39
    WHILE (284) 40
    ERRORNUM (285) 72
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 2 12
    ExtDef (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (36)
        on left: 10 11 12
        on right: 4 11
    Specifier (37)
        on left: 13 14
        on right: 4 5 6 8 9 30 47 48 49
    StructSpecifier (38)
        on left: 15 16
        on right: 14
    OptTag (39)
        on left: 17 18
        on right: 15
    Tag (40)
        on left: 19
        on right: 16
    VarDec (41)
        on left: 20 21 22 23
        on right: 10 11 12 21 22 30 52 53
    FunDec (42)
        on left: 24 25 26 27
        on right: 6
    VarList (43)
        on left: 28 29
        on right: 24 27 28
    ParamDec (44)
        on left: 30
        on right: 28 29
    CompSt (45)
        on left: 31 32
        on right: 6 36
    StmtList (46)
        on left: 33 34
        on right: 31 33
    Stmt (47)
        on left: 35 36 37 38 39 40 41 42 43 44
        on right: 33 38 39 40
    DefList (48)
        on left: 45 46
        on right: 15 31 45
    Def (49)
        on left: 47 48 49
        on right: 45
    DecList (50)
        on left: 50 51
        on right: 47 49 51
    Dec (51)
        on left: 52 53
        on right: 50 51
    Exp (52)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 35 37 38 39 40 42 43 53 54 55 56 57 58 59 60 61 62 63 64 67 68 73 74
    Args (53)
        on left: 73 74
        on right: 65 73


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI
    9       | error • Specifier SEMI

    TYPE    shift, and go to state 2
    SEMI    shift, and go to state 9
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   13 Specifier: TYPE •

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT • OptTag LC DefList RC
   16                | STRUCT • Tag

    ID  shift, and go to state 11

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    8       | Specifier • error SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   14 Specifier: StructSpecifier •

    $default  reduce using rule 14 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

    9 ExtDef: error Specifier • SEMI

    SEMI  shift, and go to state 22


State 11

   17 OptTag: ID •
   19 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   15 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 23


State 13

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    8 ExtDef: Specifier error • SEMI
   23 VarDec: error • RB
   27 FunDec: error • LP VarList RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25
    RB    shift, and go to state 26


State 17

   20 VarDec: ID •
   24 FunDec: ID • LP VarList RP
   25       | ID • LP RP
   26       | ID • LP error RP

    LP  shift, and go to state 27

    $default  reduce using rule 20 (VarDec)


State 18

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 28


State 20

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   12           | VarDec • error ExtDefList
   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB

    error  shift, and go to state 29
    COMMA  shift, and go to state 30
    LB     shift, and go to state 31

    SEMI  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 32
    LC     shift, and go to state 33

    CompSt  go to state 34


State 22

    9 ExtDef: error Specifier SEMI •

    $default  reduce using rule 9 (ExtDef)


State 23

   15 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 37


State 24

    8 ExtDef: Specifier error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 25

   27 FunDec: error LP • VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 26

   23 VarDec: error RB •

    $default  reduce using rule 23 (VarDec)


State 27

   24 FunDec: ID LP • VarList RP
   25       | ID LP • RP
   26       | ID LP • error RP

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    RP      shift, and go to state 42
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 43
    ParamDec         go to state 40


State 28

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 29

   12 ExtDecList: VarDec error • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 44
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 30

   11 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 45
    ID     shift, and go to state 46

    ExtDecList  go to state 47
    VarDec      go to state 20


State 31

   21 VarDec: VarDec LB • INT RB
   22       | VarDec LB • error RB

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 32

   32 CompSt: error • RC

    RC  shift, and go to state 50


State 33

   31 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 37


State 34

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 35

   47 Def: Specifier • DecList SEMI
   48    | Specifier • error SEMI
   49    | Specifier • DecList error

    error  shift, and go to state 52
    ID     shift, and go to state 46

    VarDec   go to state 53
    DecList  go to state 54
    Dec      go to state 55


State 36

   15 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 56


State 37

   45 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 57
    Def              go to state 37


State 38

   30 ParamDec: Specifier • VarDec

    error  shift, and go to state 45
    ID     shift, and go to state 46

    VarDec  go to state 58


State 39

   27 FunDec: error LP VarList • RP

    RP  shift, and go to state 59


State 40

   28 VarList: ParamDec • COMMA VarList
   29        | ParamDec •

    COMMA  shift, and go to state 60

    $default  reduce using rule 29 (VarList)


State 41

   26 FunDec: ID LP error • RP

    RP  shift, and go to state 61


State 42

   25 FunDec: ID LP RP •

    $default  reduce using rule 25 (FunDec)


State 43

   24 FunDec: ID LP VarList • RP

    RP  shift, and go to state 62


State 44

   12 ExtDecList: VarDec error ExtDefList •

    $default  reduce using rule 12 (ExtDecList)


State 45

   23 VarDec: error • RB

    RB  shift, and go to state 26


State 46

   20 VarDec: ID •

    $default  reduce using rule 20 (VarDec)


State 47

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 48

   22 VarDec: VarDec LB error • RB

    RB  shift, and go to state 63


State 49

   21 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 64


State 50

   32 CompSt: error RC •

    $default  reduce using rule 32 (CompSt)


State 51

   31 CompSt: LC DefList • StmtList RC

    error     shift, and go to state 65
    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    LC        shift, and go to state 33
    RETURN    shift, and go to state 72
    IF        shift, and go to state 73
    WHILE     shift, and go to state 74
    ERRORNUM  shift, and go to state 75

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 76
    StmtList  go to state 77
    Stmt      go to state 78
    Exp       go to state 79


State 52

   23 VarDec: error • RB
   48 Def: Specifier error • SEMI

    SEMI  shift, and go to state 80
    RB    shift, and go to state 26


State 53

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   52 Dec: VarDec •
   53    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 81
    LB        shift, and go to state 31

    $default  reduce using rule 52 (Dec)


State 54

   47 Def: Specifier DecList • SEMI
   49    | Specifier DecList • error

    error  shift, and go to state 82
    SEMI   shift, and go to state 83


State 55

   50 DecList: Dec •
   51        | Dec • COMMA DecList

    COMMA  shift, and go to state 84

    $default  reduce using rule 50 (DecList)


State 56

   15 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 15 (StructSpecifier)


State 57

   45 DefList: Def DefList •

    $default  reduce using rule 45 (DefList)


State 58

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   30 ParamDec: Specifier VarDec •

    LB  shift, and go to state 31

    $default  reduce using rule 30 (ParamDec)


State 59

   27 FunDec: error LP VarList RP •

    $default  reduce using rule 27 (FunDec)


State 60

   28 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 85
    ParamDec         go to state 40


State 61

   26 FunDec: ID LP error RP •

    $default  reduce using rule 26 (FunDec)


State 62

   24 FunDec: ID LP VarList RP •

    $default  reduce using rule 24 (FunDec)


State 63

   22 VarDec: VarDec LB error RB •

    $default  reduce using rule 22 (VarDec)


State 64

   21 VarDec: VarDec LB INT RB •

    $default  reduce using rule 21 (VarDec)


State 65

   32 CompSt: error • RC
   41 Stmt: error • SEMI

    SEMI  shift, and go to state 86
    RC    shift, and go to state 50


State 66

   70 Exp: INT •

    $default  reduce using rule 70 (Exp)


State 67

   71 Exp: FLOAT •

    $default  reduce using rule 71 (Exp)


State 68

   65 Exp: ID • LP Args RP
   66    | ID • LP RP
   69    | ID •

    LP  shift, and go to state 87

    $default  reduce using rule 69 (Exp)


State 69

   63 Exp: MINUS • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 88


State 70

   64 Exp: NOT • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 89


State 71

   62 Exp: LP • Exp RP

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 90


State 72

   37 Stmt: RETURN • Exp SEMI
   43     | RETURN • Exp error
   44     | RETURN • error SEMI

    error     shift, and go to state 91
    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 92


State 73

   38 Stmt: IF • LP Exp RP Stmt
   39     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 93


State 74

   40 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 94


State 75

   72 Exp: ERRORNUM •

    $default  reduce using rule 72 (Exp)


State 76

   36 Stmt: CompSt •

    $default  reduce using rule 36 (Stmt)


State 77

   31 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 95


State 78

   33 StmtList: Stmt • StmtList

    error     shift, and go to state 65
    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    LC        shift, and go to state 33
    RETURN    shift, and go to state 72
    IF        shift, and go to state 73
    WHILE     shift, and go to state 74
    ERRORNUM  shift, and go to state 75

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 76
    StmtList  go to state 96
    Stmt      go to state 78
    Exp       go to state 79


State 79

   35 Stmt: Exp • SEMI
   42     | Exp • error SEMI
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID

    error     shift, and go to state 97
    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    SEMI      shift, and go to state 107
    LB        shift, and go to state 108


State 80

   48 Def: Specifier error SEMI •

    $default  reduce using rule 48 (Def)


State 81

   53 Dec: VarDec ASSIGNOP • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 109


State 82

   49 Def: Specifier DecList error •

    $default  reduce using rule 49 (Def)


State 83

   47 Def: Specifier DecList SEMI •

    $default  reduce using rule 47 (Def)


State 84

   51 DecList: Dec COMMA • DecList

    error  shift, and go to state 45
    ID     shift, and go to state 46

    VarDec   go to state 53
    DecList  go to state 110
    Dec      go to state 55


State 85

   28 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 28 (VarList)


State 86

   41 Stmt: error SEMI •

    $default  reduce using rule 41 (Stmt)


State 87

   65 Exp: ID LP • Args RP
   66    | ID LP • RP

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    RP        shift, and go to state 111
    ERRORNUM  shift, and go to state 75

    Exp   go to state 112
    Args  go to state 113


State 88

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   63    | MINUS Exp •
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID

    STAR  shift, and go to state 102
    DIV   shift, and go to state 103
    DOT   shift, and go to state 106
    LB    shift, and go to state 108

    $default  reduce using rule 63 (Exp)


State 89

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   64    | NOT Exp •
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID

    DOT  shift, and go to state 106
    LB   shift, and go to state 108

    $default  reduce using rule 64 (Exp)


State 90

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   62    | LP Exp • RP
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID

    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    RP        shift, and go to state 114
    LB        shift, and go to state 108


State 91

   44 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 115


State 92

   37 Stmt: RETURN Exp • SEMI
   43     | RETURN Exp • error
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID

    error     shift, and go to state 116
    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    SEMI      shift, and go to state 117
    LB        shift, and go to state 108


State 93
